--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>GIT & GITHUB</h1>
+    <h3>GIT</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et quasi, labore nulla, vitae mollitia consequatur corrupti corporis ad dicta vero a reiciendis cupiditate doloribus similique iste recusandae. Assumenda, quas repellendus?</p>
 </body>
 </html>
